<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configurar.ConfigurarFragment"
    android:background="@drawable/fondo">


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/check_conf_estado_clima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:checked="false"
        android:text="@string/check_estado_clima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="129dp"
        android:textColor="?attr/colorPrimary"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/check_conf_indicadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:checked="false"
        android:text="@string/check_indicadores"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="321dp"
        android:textColor="?attr/colorPrimary"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/check_conf_movilidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:checked="false"
        android:text="@string/check_movilidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="193dp"
        android:textColor="?attr/colorPrimary"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/check_conf_noticias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:checked="false"
        android:text="@string/check_noticias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="257dp"
        android:textColor="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/text_conf_titulo_configurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_title_configurar"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp"
        android:textColor="?attr/colorPrimary"/>



    <Button
        android:id="@+id/btn_configuracion_guardar"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="320dp"
        android:text="@string/btn_configuracion_guardar"
        android:textColor="?attr/colorSecondary"
        app:backgroundTint="?attr/colorPrimary"
        app:iconTint="#039DE3"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="516dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>